Fix overlapping texts

--- a/sass/beauty.scss
+++ b/sass/beauty.scss
@@ -163,6 +163,12 @@ img.grid-item {
         aspect-ratio: 1;
         margin: 10px;
         display: flex;
+        overflow: hidden;
+        a {
+          h2 {
+            margin-top: 5px;
+          }
+        }
     }
     img {
         min-width: 100%;
